# translate-cli

./: .gitignore  .goreleaser.yml  AGENTS.md  Cargo.toml  README.md  go.mod  package.json
.github/workflows/: ci.yml  release.yml
cmd/t/: main.go
docs/architecture/: 2026-05-13-codex-runtime-options.md  2026-05-13-mvp-architecture.md  2026-05-29-language-resolution.md  2026-05-29-local-llm-adapters.md
docs/work-log/: 2026-05-13-codex-cli-compatibility.md  2026-05-13-completion-audit.md  2026-05-13-low-reasoning.md  2026-05-13-mvp-implementation.md  2026-05-14-bun-single-binary.md  2026-05-14-completion-audit.md  2026-05-14-homebrew-tap-setup.md  2026-05-14-homebrew-without-node.md  2026-05-14-node-ci-workflows.md  2026-05-14-node-typescript-port.md  2026-05-14-project-root-npm-package.md  2026-05-18-rust-completion-audit.md  2026-05-18-rust-port.md  2026-05-19-rust-homebrew-release.md  2026-05-26-ci-publish.md  2026-05-26-logo-asset.md  2026-05-28-brand-casing.md  2026-05-28-readme-customization.md  2026-05-29-iso639-language-resolution.md  2026-05-29-local-llm-support.md  2026-05-29-release-0.1.4.md  2026-05-29-release-0.1.5.md
internal/agent/: adapter.go  adapter_test.go  claude.go  codex.go  detect.go  exec.go
internal/cli/: command.go  command_test.go  parser.go  parser_test.go
internal/config/: config.go  config_test.go  (+1 more)
npm/: package-lock.json  package.json
scripts/: build-release.mjs
src/: agent.rs  app.rs  cli.rs  config.rs  error.rs  input.rs  lang.rs  main.rs  output.rs  prompt.rs  t.test.ts  wizard.rs
tests/: cli.rs
xtask/: Cargo.toml
(+26 files in other folders)
